@startuml duplication_json_encoder
hide circle
skinparam classAttributeIconSize 0
title Classe utilitaire JsonEncoder

class "<<Static>>\n<u>JsonEncoder" as JsonEncoder {
    - raise_unsupported_type_exception(type_name)
    - raise_invalid_dict_key_exception(type_name)
    - enum_to_raw(_enum) : list
    - dict_to_raw(_dict) : dict
    - list_to_raw(_list) : list
    - tuple_to_raw(_tuple) : list
    - set_to_raw(_set) : list
    - primitive_to_raw(primitive) : object
    - object_to_raw(_obj) : object
    + breakdown(obj) : object
    + dump(obj) : str
} 

class "JsonEncoder.Interface" as JEInterface {
    + encode() : object
}

class DuplicationReport {
    - lines : int
    - fragment : str
    - files : list<DuplicationReport.File>
    + ctor(lines, fragment)
    + add_file(file)
    + get_lines() : int
    + get_fragment() : str
    + get_file_nb() : int
}

class "DuplicationReport.File" as DRFile {
    + filename : str
    + lines : ValueRange<int>
    + columns : ValueRange<int>
    + ctor(filename, lines, columns)
}

class ValueRange< T > {
    + From : T
    + To : T
    + ctor(From, To)
    + is_value_within(val) : bool
    + as_dict() : dict<str, T>
    + <b>encode</b>() : dict 
}

DRFile --|> JEInterface : Étend
DuplicationReport --|> JEInterface : Étend
JEInterface ... JsonEncoder : Utilise
DuplicationReport -right-o DRFile : Aggrégation
ValueRange ..|> JEInterface : Implémente
DRFile -right-* ValueRange : Composition

@enduml